--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html"><img src="images/logo3.png" alt=""></a>
+            <a href="index.html"><img src="images/logo3.PNG" alt=""></a>
             <ul class="nav-ul">
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT US</a></li>
@@ -79,7 +79,7 @@
     <section >
         <div id="footer">
             <div id="copyright">Copyright © 2021 The Coffee House. All Rights Reserved.</div>
-            <div id="logo"><img src="images/logo3.png" alt=""></div>
+            <div id="logo"><img src="images/logo3.PNG" alt=""></div>
             <div id="facebook">
                 <a href="http://www.facebook.com" target="_blank"> <img  src="images/facebook.png" alt=""></a>
                 <a href="http://www.twitter.com" target="_blank"><img src="images/iconfinder_twitter__social__media_icons_2986205.png" alt=""></a>
